@@ -67,10 +67,10 @@ docinfo, see this document as an example.
 .BI \-\-config\fB= <file>
 Read configuration settings from <file>, if it exists.
 .TP
-.B \-\-version\fP,\fB  \-V
+.B  \-\-version\fP,\fB  \-V
 Show this program\(aqs version number and exit.
 .TP
-.B \-\-help\fP,\fB  \-h
+.B  \-\-help\fP,\fB  \-h
 Show this help message and exit.
 .UNINDENT
 .sp
